<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/geolocation"
            android:icon="@drawable/ic_action_location"
            android:title="@string/geolocation" />
        <item
            android:id="@+id/home"
            android:icon="@drawable/home_icon"
            android:title="@string/title_home" />

    </group>

    <item android:title="@string/title_menu_nav">
        <menu>
            <item
                android:id="@+id/nav_switch"
                android:icon="@drawable/ic_item1"
                android:title="@string/switch_title"
                app:actionLayout="@layout/layout_switch" />
            <item
                android:id="@+id/menu_setting"
                android:icon="@drawable/setting_icon"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/exit"
                android:icon="@drawable/baseline_power_settings_new_24"
                android:title="@string/log_out" />

            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>